# DolmexicaInfinite

./: .gitattributes  .gitignore  Makefile  Makefile.common  Makefile.dc  Makefile.web  README.md  afterimage.cpp  afterimage.h  ai.c  ai.cpp  ai.h  arcademode.c  arcademode.cpp  arcademode.h  boxcursorhandler.c  boxcursorhandler.cpp  boxcursorhandler.h  characterselectscreen.c  characterselectscreen.cpp  characterselectscreen.h  clipboardhandler.c  clipboardhandler.h  collision.c  collision.cpp  collision.h  config.c  config.cpp  config.h  creditsmode.c  creditsmode.cpp  creditsmode.h  debugscreen.cpp  debugscreen.h  dolmexicadebug.cpp  dolmexicadebug.h  dolmexicastoryscreen.c  dolmexicastoryscreen.cpp  dolmexicastoryscreen.h  exhibitmode.cpp  (+149 more)
assets/Beat/: Beat.air  Beat.cmd  Beat.cns  Beat.def  Beat.sff  Beat.snd  Beat_A.st  Beat_C.st  Beat_S.st
assets/Beat/Palettes/: 1.act
assets/Sonicth/: Sonic.air  Sonic.cmd  Sonic.cns  Sonic.sff  Sonic.snd  Sonic1.act  Sonic1_fixed.act  Sonic2.act  Sonic3.act  Sonic4.act  Sonic5.act  Sonic6.act  Sonicth.def
assets/chars/kfm/: kfm.cns
assets/data/: common1.cns  mugen.cfg  select.def  system.def  system.sff
assets/data_mugen/: fight.def  mugen.cfg  system.sff
assets/fonts/: segoe.hdr
assets/kfm/: kfm.ai
assets/menu/: MENU.air  MENU.sff
assets/selectscreen/: SELECT.air  SELECT.sff
assets/stages/: greenhill.def  greenhill.sff  kfm.def  kfm.sff  stage0-720.def  stage0.def  stage0.sff
assets/story/: 1.air  1.def  1.sff  2.def  2.sff  3.def  3.sff  4.def  4.sff
boot/: ip.txt
cmake/: CMakeLists.txt
docs/: LICENSE  differences.html  dolmexica.html  history.html  makeyourowngamedreamcast.html  makeyourowngamevita.html  makeyourowngameweb.html  netplay.html  osu.html  sctrls.html  storyhelper.html  storymode.html  storysctrls.html  storytrigger.html  trigger.html
test/: assets_test.cpp  commontestfunctionality.cpp  commontestfunctionality.h  crashtest.cpp  main.cpp  mugenassignmentevaluatortest.cpp  performancetest.cpp  profilertest.cpp
tools/MakeYourOwnGameKitGui/: MakeYourOwnGameKitGui.sln
tools/MakeYourOwnGameKitGui/MakeYourOwnGameKitGuiDreamcast/: App.xaml  App.xaml.cs  MainWindow.xaml  (+2 more)
tools/emu_dreamcast/: create_and_run_dc_emu.bat
vita/: CmakeLists.txt
windows/: DolmexicaInfinite.code-workspace  DolmexicaInfinite.rc  DolmexicaInfinite.sln  DolmexicaInfinite.vcxproj  DolmexicaInfinite.vcxproj.filters  DolmexicaInfiniteAll.sln  DolmexicaInfiniteDreamcast.sln  DolmexicaInfiniteDreamcast.vcxproj  DolmexicaInfiniteDreamcast.vcxproj.filters  DolmexicaInfiniteTest.vcxproj  DolmexicaInfiniteTest.vcxproj.filters  DolmexicaInfiniteVita.sln  DolmexicaInfiniteVita.vcxproj  DolmexicaInfiniteVita.vcxproj.filters  DolmexicaInfiniteWeb.sln  DolmexicaInfiniteWeb.vcxproj  DolmexicaInfiniteWeb.vcxproj.filters  post_build.bat  resource.h
(+19 files in other folders)
